<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#ccb9cf"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heading1"
        android:text="@string/heading1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#990e68"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yes"
        android:text="@string/yes"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#056e32"
        android:layout_margin="5dp"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/no"
        android:text="@string/no"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#e10e2a"
        android:layout_margin="5dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:id="@+id/button1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#235d97"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result1"
        android:hint="@string/result1"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textColor="#541111"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heading2"
        android:text="@string/heading2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#0c3156"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dhaka"
        android:text="@string/dhaka"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#66bcdc"
        android:layout_margin="5dp"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/comilla"
        android:text="@string/comilla"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#fdf254"
        android:layout_margin="5dp"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/khulna"
        android:text="@string/khulna"
        android:textStyle="bold"
        android:textColor="#95ba19"
        android:textSize="18sp"
        android:layout_margin="5dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        android:id="@+id/button2"
        android:textSize="18sp"
        android:textColor="#236bb4"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result2"
        android:hint="@string/result2"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#541111"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>